--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bonjour Président</h1>
+    <p>Bonjour Président</p>
 </body>
 </html>
